Updated TensorFlow, PyTorch and MXNet versions

--- a/src/front-end/src/templates/index.html
+++ b/src/front-end/src/templates/index.html
@@ -35,7 +35,7 @@
         <p>The MMP solution allows you to create Machine Learning Experiments by leveraging an AWS managed MlOps Pipeline to train Machine Learning models at scale.</p>
         <p>To address your <strong>complexity</strong>, <strong>cost</strong>, and <strong>span of control</strong> requirements, the Amazon MMP service leverages a selection of back-end training frameworks, such as Amazon SageMaker, allowing you the flexibility to choose the right model training solution to fit your business objectives.</p>
         <p>The service further allows you manage these experiments through an Experiment Dashboard and makes it easier for you analyze each trained machine learning model and compare them individually, before deploying the best one into production.</p>
-        <p><a class="btn btn-info btn-lg" href="{{ url_for('create_sm_experiment') }}" role="button">Create Experiment &raquo;</a></p>
+        <p><a class="btn btn-info btn-lg" href="{{ url_for('create_experiment') }}" role="button">Create Experiment &raquo;</a></p>
       </div>
     </div>
 
